# tactics_engine

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  example_grid.json  maps.db
include/Tactics/Components/: CameraController.hpp  CameraPanController.hpp  Cursor.hpp  CursorController.hpp  CursorEvents.hpp  Grid.hpp  Tile.hpp  Unit.hpp  UnitController.hpp  ZoomController.hpp
include/Tactics/Core/: Camera.hpp  CameraController.hpp  CameraPanController.hpp  Coordinates.hpp  Cursor.hpp  CursorController.hpp  CursorEvents.hpp  Engine.hpp  EventBus.hpp  Events.hpp  GameConfig.hpp  GeneratorConfig.hpp  Grid.hpp  IGridRepository.hpp  IUnitRepository.hpp  InputManager.hpp  Logger.hpp  MapGenerator.hpp  Rect.hpp  SQLiteGridRepository.hpp  SQLiteUnitRepository.hpp  Scene.hpp  SceneManager.hpp  Sprite.hpp  Texture.hpp  Tile.hpp  TimeManager.hpp  Unit.hpp  UnitController.hpp  Vector2.hpp  ZoomController.hpp
include/Tactics/Renderers/: CursorRenderer.hpp  GridRenderer.hpp  UnitRenderer.hpp
include/Tactics/Scenes/: GridScene.hpp
src/: main.cpp
src/Components/: Camera.cpp  CameraController.cpp  CameraPanController.cpp  Cursor.cpp  CursorController.cpp  Grid.cpp  Tile.cpp  Unit.cpp  UnitController.cpp  ZoomController.cpp
src/Core/: Camera.cpp  CameraController.cpp  CameraPanController.cpp  Cursor.cpp  CursorController.cpp  CursorEvents.cpp  Engine.cpp  EventBus.cpp  Grid.cpp  InputManager.cpp  Logger.cpp  MapGenerator.cpp  SQLiteGridRepository.cpp  SQLiteUnitRepository.cpp  SceneManager.cpp  Sprite.cpp  Texture.cpp  Tile.cpp  TimeManager.cpp  Unit.cpp  UnitController.cpp  ZoomController.cpp
src/Renderers/: CursorRenderer.cpp  GridRenderer.cpp  UnitRenderer.cpp
src/Scenes/: GridScene.cpp
tests/Core/: GridRepositoryTest.cpp  MapGeneratorTest.cpp  RectTest.cpp  Vector2Test.cpp
